--- a/sass/components/_company-team-section.scss
+++ b/sass/components/_company-team-section.scss
@@ -24,11 +24,17 @@
 }
 
 .company-team__item {
-    margin-bottom: 30px;
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+
     @media screen and (min-width: $tablet-breakpoint) {
         & {
+            width: 354px;
             margin-bottom: 0;
-            flex-basis: calc(100% / 2 - 30px);
+        }
+        &:not(:last-child) {
+            margin-bottom: 0;
         }
     }
 
@@ -42,7 +48,13 @@
 
 .employee-description {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
+    
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            padding-bottom: 30px;
+        }
+    }
 }
 
 .employee-description__name {
@@ -50,7 +62,7 @@
     font-style: normal;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.1875;
+    line-height: calc(19 / 16);
     text-align: center;
     color: $global-blackgray-color;
 }
@@ -58,7 +70,7 @@
 .employee-description__position {
     margin-bottom: 16px;
     font-size: 16px;
-    line-height: 19px;
+    line-height: calc(19 / 16);
     text-align: center;
     color: $global-lightblack-color;
 }
