--- a/sass/components/_site-footer.scss
+++ b/sass/components/_site-footer.scss
@@ -19,7 +19,6 @@
             display: flex;
             align-items: baseline;
             justify-content: space-around;
-            margin-bottom: 60px;
         }
     }
 }
@@ -38,7 +37,7 @@
 }
 
 .footer-contacts__list {
-    // margin-bottom: 60px;
+    margin-bottom: 60px;
     text-align: center;
     li:not(:last-child) {
         margin-bottom: 12px;
@@ -46,6 +45,7 @@
 
     @media screen and (min-width: $desktop-breakpoint) {
         & {
+            margin-bottom: 0px;
             text-align: left;
         }
     }
@@ -94,10 +94,11 @@
 }
 
 .footer-social-container {
-    // margin-bottom: 60px;
+    margin-bottom: 60px;
     @media screen and (min-width: $desktop-breakpoint) {
         & {
             margin-left: 70px;
+            margin-bottom: 0;
         }
     }
 }
