--- a/css/main.css
+++ b/css/main.css
@@ -1025,7 +1025,6 @@ img {
 }
 
 .projects-filter__button {
-  flex-basis: calc(33.3333333333% - 8px);
   background: #F5F4FA;
   padding: 6px 22px;
   font-family: "Roboto", sans-serif;
@@ -1050,24 +1049,37 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.projects__list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .projects__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+  }
 }
 
-.projects__item {
-  flex-basis: 100%;
+.projects__item:not(:last-child) {
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .projects__item {
-    flex-basis: calc(50% - 30px);
+    height: 100%;
+    width: 354px;
+  }
+  .projects__item:first-child .projects__type {
+    margin-bottom: 35px;
+  }
+  .projects__item:not(:last-child) {
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .projects__item {
-    flex-basis: calc(33.3333333333% - 30px);
+    width: 370px;
+    margin: 0;
+  }
+  .projects__item:first-child .projects__type {
+    margin-bottom: 0;
   }
 }
 
@@ -1121,6 +1133,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 77px 24px;
   /* css перехід */
   transform: translateY(100%);
   transition-property: transform;
@@ -1135,7 +1148,6 @@ img {
 }
 
 .projects__description-text {
-  width: 322px;
   font-size: 18px;
   line-height: 1.5555555556;
   color: #FFFFFF;
@@ -1182,7 +1194,6 @@ img {
     display: flex;
     align-items: baseline;
     justify-content: space-around;
-    margin-bottom: 60px;
   }
 }
 
@@ -1199,6 +1210,7 @@ img {
 }
 
 .footer-contacts__list {
+  margin-bottom: 60px;
   text-align: center;
 }
 .footer-contacts__list li:not(:last-child) {
@@ -1206,6 +1218,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .footer-contacts__list {
+    margin-bottom: 0px;
     text-align: left;
   }
 }
@@ -1249,9 +1262,13 @@ img {
   }
 }
 
+.footer-social-container {
+  margin-bottom: 60px;
+}
 @media screen and (min-width: 1200px) {
   .footer-social-container {
     margin-left: 70px;
+    margin-bottom: 0;
   }
 }
 
