--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -52,6 +52,7 @@
                             rgba(47, 48, 58, 0.4),
                             rgba(47, 48, 58, 0.4)),
                               url(../images/hero_desktop.jpg);
+            background-size: cover;
         }
         @media screen and (min-resolution: 2dppx) {
             & {
