--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,8 @@ img {
 }
 @media screen and (min-width: 768px) {
   .site-nav__container {
+    position: static;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -373,6 +375,11 @@ img {
     display: none;
   }
 }
+@media screen and (min-width: 768px) {
+  .header-contacts__email-icon {
+    display: block;
+  }
+}
 
 .header-contacts__phone-icon {
   width: 10px;
@@ -383,6 +390,11 @@ img {
 @media screen and (max-width: 768px) {
   .header-contacts__phone-icon {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-contacts__phone-icon {
+    display: block;
   }
 }
 
@@ -455,6 +467,7 @@ img {
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_desktop.jpg);
+    background-size: cover;
   }
 }
 @media screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
