--- a/sass/components/_site-header.scss
+++ b/sass/components/_site-header.scss
@@ -103,6 +103,8 @@
 
     @media screen and (min-width: $tablet-breakpoint) {
         & {
+            position: static;
+            padding: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -295,6 +297,10 @@
     @media screen and (max-width: $tablet-breakpoint) {
         display: none;
     }
+    
+    @media screen and (min-width: $tablet-breakpoint) {
+        display: block;
+    }
 }
 
 .header-contacts__phone-icon {
@@ -305,6 +311,10 @@
 
     @media screen and (max-width: $tablet-breakpoint) {
         display: none;
+    }
+    
+    @media screen and (min-width: $tablet-breakpoint) {
+        display: block;
     }
 }
 
